--- a/index.html
+++ b/index.html
@@ -1,57 +1,35 @@
 <!DOCTYPE html>
-<html lang="en-us">
-  <head>
-    <meta charset="utf-8">
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | %UNITY_WEB_NAME%</title>
-    <meta name="description" content="%UNITY_CUSTOM_DESCRIPTION%">
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
-    <link rel="stylesheet" href="TemplateData/style.css">
-    <script src="TemplateData/UnityProgress.js"></script>
-    <script src="%UNITY_WEBGL_LOADER_URL%"></script>
-    <script>
-      UnityLoader.compatibilityCheck = function (unityInstance, onsuccess, onerror) {
-        if (!UnityLoader.SystemInfo.hasWebGL) {
-          unityInstance.popup('Your browser does not support WebGL',
-            [{text: 'OK', callback: onerror}]);
-        } else {
-          onsuccess();
-        }
-      }
-      var unityInstance = UnityLoader.instantiate("unityContainer", "%UNITY_WEBGL_BUILD_URL%", {onProgress: UnityProgress});
-    </script>
-  </head>
-  <body>
-    <div class="webgl-content" style="width: 100%; height: 100%">
-      <div id="unityContainer" style="width: 100%; height: 100%"></div>
-      <div class="footer">
-        <div class="webgl-logo"></div>
-        <button class="entervr" id="entervr" value="Enter VR" disabled>VR</button>
-        <button class="enterar" id="enterar" value="Enter AR" disabled>AR</button>
-       <div class="webxr-link">From <a href="https://www.youtube.com/channel/UCCxGucNZMsIEQ_qc51gf72w?view_as=subscriber" target="_blank" title="WebXR Export">AllinReality</a></div>
-        <div class="title">%UNITY_WEB_NAME%</div>
-      </div>
+    <title>AR test</title>
+    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+    <script src="./blippar/webar-sdk-v1.2.0-beta.min.js"></script></head>
+<body>
+    <div>Wing master
     </div>
-    <script>
-      let enterARButton = document.getElementById('enterar');
-      let enterVRButton = document.getElementById('entervr');
-      
-      document.addEventListener('onARSupportedCheck', function (event) {
-        enterARButton.disabled = !event.detail.supported;
-      }, false);
-      document.addEventListener('onVRSupportedCheck', function (event) {
-        enterVRButton.disabled = !event.detail.supported;
-      }, false);
-      
-      enterARButton.addEventListener('click', function (event) {
-        document.dispatchEvent(new CustomEvent('toggleAR', {}));
-      }, false);
-      enterVRButton.addEventListener('click', function (event) {
-        document.dispatchEvent(new CustomEvent('toggleVR', {}));
-      }, false);
-    </script>
-    <script src="gl-matrix-min.js"></script>
-    <script src="webxr.js"></script>
-  </body>
+    <div>
+        <a-scene
+    webar-scene="key: xxxxxxxx-1111-2222-3333-yyyyyyyyyyyy"
+    vr-mode-ui="enabled: false"
+    device-orientation-permission-ui="enabled: false"
+    loading-screen="enabled: false">
+    <a-camera webar-camera></a-camera>
+    <a-assets>    
+        <a-asset-item
+          id="astronaut"
+          src="models/astronaut.glb">
+        </a-asset-item>
+      </a-assets>
+  <a-entity webar-stage>
+    <!-- Read the next step to place 3D AR models here -->
+    <a-entity gltf-model="#astronaut" id="astronaut_1" 
+    rotation="0 0 0" position="0 0 0" scale="0.25 0.25 0.25"
+    webar-loadmonitor="elType: glb"></a-entity>
+ </a-entity>
+    </a-scene>
+    </div>
+</body>
 </html>
